# slam_demo

./: .gitignore  CMakeLists.txt  README.md  eval.py  eval_exp.py  eval_sim.py  eval_sim_fig2.py  eval_sim_fig3.py  eval_small.py  exp_eval.py  exp_run.sh  run.sh  run_exp.sh  run_sim.sh  sim_easy_eval.py  sim_easy_run.sh  sim_eval.py  sim_eval_2.py  sim_exp_window_eval.py  sim_exp_window_run.sh  sim_fixed_eval.py  sim_fixed_run.sh  sim_run.sh  sim_sliding_window_eval.py  sim_sliding_window_run.sh  test_eval.py
EigenRand/: CMakeLists.txt
EigenRand/EigenRand/: Macro.h
apps/: CMakeLists.txt  backend_app.cc  backend_boem_app.cc  backend_em_app.cc  backend_opt_app.cc  frontend_app.cc  gt_process_app.cc  traj_process_app.cc
config/: config_fpga_p2_euroc.yaml  config_sim.yaml  config_sim_easy.yaml  config_sim_sliding_window.yaml  feature_obs_5.csv
data/: out_kf_time.csv  out_state.csv
data/MH_01/: config_exp.yaml  feature_obs.csv  okvis_kf.csv  traj_boem.csv  traj_gt.csv
data/MH_02/: config_exp.yaml  feature_obs.csv  okvis_kf.csv  okvis_state.csv  traj_gt.csv  traj_opt.csv
data/MH_03/: config_exp.yaml  feature_obs.csv  okvis_kf.csv  okvis_state.csv  traj_vo.csv
data/MH_04/: feature_obs.csv  okvis_kf.csv  okvis_state.csv  traj_boem.csv  traj_em.csv  traj_gt.csv  traj_opt.csv
data/MH_05/: config_exp.yaml  feature_obs.csv  okvis_kf.csv  okvis_state.csv  traj_boem.csv  traj_opt.csv
eval/: bar_plot.py  sim_easy_eval.py  sim_easy_traj.py  sim_exp_window_eval.py  sim_fixed_eval.py  sim_sliding_window_eval.py
eval/visualization/: __init__.py
exp/: CMakeLists.txt  backend.h  backend_boem_app.cc  backend_em_app.cc  backend_opt_app.cc  frontend.h  frontend_app.cc  gt_process_app.cc  traj_process_app.cc
lib/: CMakeLists.txt  constant.h  frontend.h  imu_data.h  imu_error.h  parameter_block.h  pre_int_imu_error.h  quat_parameter_block.h  reprojection_error.h  sized_parameter_block.h  so3.h  triangularization.h  vec_3d_parameter_block.h
result/MH_01/: traj_boem.csv  traj_boem_x.csv  traj_em.csv  traj_em_x.csv  traj_gt.csv  traj_opt.csv  traj_opt_x.csv  traj_vo.csv  traj_vo_x.csv
result/MH_02/: traj_boem.csv  traj_boem_x.csv  traj_em.csv  traj_em_x.csv  traj_gt.csv  traj_opt.csv  traj_opt_x.csv  traj_vo.csv  traj_vo_x.csv
result/MH_03/: traj_boem.csv  traj_boem_x.csv  traj_em.csv  traj_em_x.csv  traj_gt.csv  traj_opt.csv  traj_opt_x.csv  traj_vo.csv  traj_vo_x.csv
result/MH_04/: traj_boem.csv  traj_boem_x.csv  traj_em.csv  traj_em_x.csv  traj_gt.csv  traj_opt.csv  traj_opt_x.csv  traj_vo.csv  traj_vo_x.csv
result/MH_05/: traj_boem.csv  traj_boem_x.csv  traj_em.csv  traj_em_x.csv  traj_gt.csv  traj_opt.csv  traj_opt_x.csv  traj_vo.csv  traj_vo_x.csv
result/sim/: boem.csv  boem_0.csv  boem_1.csv  dr.csv  dr_0.csv  dr_1.csv  dr_error.csv  em.csv  em_0.csv  em_1.csv  gt.csv  opt.csv  opt_0.csv  opt_1.csv  pre.csv
sim/: CMakeLists.txt  sim.h  sim_app.cc  sim_app_2.cc  sim_boem_app.cc  sim_em_app.cc  sim_opt_app.cc
sim/easy/: CMakeLists.txt  app.cc  boem_app.cc  em_app.cc  opt_app.cc  sim.h
sim/exp_window/: CMakeLists.txt  app.cc  boem_app.cc  em_app.cc  opt_app.cc  sim.h
sim/fixed/: CMakeLists.txt  app.cc  boem_app.cc  em_app.cc  opt_app.cc  sim.h
sim/sim_vis/: CMakeLists.txt  sim.h  sim_boem_vis.cc  sim_em_vis.cc  sim_opt_vis.cc  sim_vis.cc
sim/sliding_window/: CMakeLists.txt  app.cc  boem_app.cc  em_app.cc  opt_app.cc  sim.h
sim_easy/: CMakeLists.txt  sim_easy_app.cc  sim_easy_boem_app.cc  sim_easy_em_app.cc  sim_easy_opt_app.cc
sim_exp_window/: CMakeLists.txt  sim.cc  sim.h  sim_boem.cc  sim_em.cc  sim_opt.cc
sim_fixed/: CMakeLists.txt  sim.cc  sim.h  sim_boem.cc  sim_em.cc  sim_opt.cc
sim_sliding_window/: CMakeLists.txt  sim.h  sim_app_s_win.cc  sim_boem_app_s_win.cc  sim_em_app_s_win.cc  sim_opt_app_s_win.cc
test/: CMakeLists.txt  eigenRand_test.cc  imu_error_test.cc  pre_int_imu_error_test.cc  pre_int_imu_error_test_mc.cc  reprojection_error_test.cc  reprojection_error_test_mc.cc  transformation.h
